@@ -71,6 +71,7 @@ Fixed bugs
   Thus, do not change constraints/logicor/sepafreq anymore, but output warning.
 - Fixed assert that assumed infeasibility cannot occur in presol_boundshift.
 - Fixed sign bug during creation of conflict constraints with almost zero left-hand side.
+- Disabled call of conflict handler for conflict sets that contain relaxation-only variables.
 
 
 Miscellaneous
